SA source added to lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(${PROJECT_NAME} WIN32 src/main.cpp)
 # Объектные библиотеки
 add_library(${PROJECT_NAME}_objs OBJECT
     src/Algorithms/GeneticAlgorithm.cpp
-    # src/Algorithms/SimulatedAnnealing.cpp
+    src/Algorithms/SimulatedAnnealing.cpp
     src/Core/CNF.cpp
     src/Core/Candidate.cpp
     src/Core/Candidates.cpp
